--- a/src/routes/Organizations/Organization.css
+++ b/src/routes/Organizations/Organization.css
@@ -1,6 +1,6 @@
 #posts {
-	background-color: rgb(179, 185, 182);
-	border: 2px solid rgb(40, 66, 52);
+	/* background-color: rgb(179, 185, 182); */
+	/* border: 2px solid rgb(40, 66, 52); */
 }
 
 .horizontal {
